change to lucky number
